# autoshorts

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs  media.rs  models.rs  transcription.rs
