[package]
name = "autoshorts"
version = "0.1.3"
description = "Local-first long-form to short-form clip studio"
authors = ["AutoShorts"]
edition = "2021"

[lib]
name = "autoshorts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "autoshorts"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
